[gd_scene load_steps=44 format=2]

[ext_resource path="res://Scripts/Cutscenes.gd" type="Script" id=1]
[ext_resource path="res://Foguin.png" type="Texture" id=2]
[ext_resource path="res://Sprites/DifficultyScreen/ForwardHover.png" type="Texture" id=3]
[ext_resource path="res://Sprites/DifficultyScreen/SkipHover.png" type="Texture" id=4]
[ext_resource path="res://Sprites/DifficultyScreen/PrevHover.png" type="Texture" id=5]
[ext_resource path="res://Sprites/DifficultyScreen/Prev.png" type="Texture" id=6]
[ext_resource path="res://Sprites/DifficultyScreen/Forward.png" type="Texture" id=7]
[ext_resource path="res://Sprites/StartScreen/BGStartScreen.png" type="Texture" id=8]
[ext_resource path="res://Sprites/DifficultyScreen/Skip.png" type="Texture" id=9]
[ext_resource path="res://Sounds/RockSlide.wav" type="AudioStream" id=10]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 384, 64, 128 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="BgStartScreen" type="Sprite" parent="."]
position = Vector2( 511.5, 301 )
scale = Vector2( 2.046, 1.204 )
texture = ExtResource( 8 )

[node name="Fogo" type="AnimatedSprite" parent="."]
position = Vector2( -19, 548 )
scale = Vector2( 10.1719, 8.875 )
frames = SubResource( 33 )
frame = 8
speed_scale = 7.0
playing = true
offset = Vector2( 17.0077, -5.97184 )

[node name="Fogo2" type="AnimatedSprite" parent="."]
position = Vector2( 357, 573 )
scale = Vector2( 10.1719, 8.875 )
frames = SubResource( 33 )
frame = 8
speed_scale = 7.0
playing = true
offset = Vector2( 17.0077, -5.97184 )

[node name="Fogo3" type="AnimatedSprite" parent="."]
position = Vector2( 748, 539 )
scale = Vector2( 10.1719, 8.875 )
frames = SubResource( 33 )
frame = 8
speed_scale = 7.0
playing = true
offset = Vector2( 17.0077, -5.97184 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 190.0
margin_top = 12.0
margin_right = 816.0
margin_bottom = 489.0
color = Color( 0, 0, 0, 1 )

[node name="Images" type="Sprite" parent="."]
position = Vector2( 507, 250 )
scale = Vector2( 0.75, 0.75 )

[node name="Prev" type="TextureButton" parent="."]
margin_left = 40.0
margin_top = 500.0
margin_right = 320.0
margin_bottom = 575.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="Skip" type="TextureButton" parent="."]
margin_left = 363.0
margin_top = 499.0
margin_right = 643.0
margin_bottom = 574.0
rect_pivot_offset = Vector2( 130, 37 )
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 4 )

[node name="Next" type="TextureButton" parent="."]
margin_left = 686.0
margin_top = 502.0
margin_right = 966.0
margin_bottom = 577.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 3 )

[node name="RockButton" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 316, 335 )
stream = ExtResource( 10 )

[connection signal="mouse_entered" from="Prev" to="." method="_on_Prev_mouse_entered"]
[connection signal="pressed" from="Prev" to="." method="_on_Prev_pressed"]
[connection signal="mouse_entered" from="Skip" to="." method="_on_Skip_mouse_entered"]
[connection signal="pressed" from="Skip" to="." method="_on_Skip_pressed"]
[connection signal="mouse_entered" from="Next" to="." method="_on_Next_mouse_entered"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
